Add home component and populate with Movies

--- a/src/app/my-home-component/my-home-component.component.html
+++ b/src/app/my-home-component/my-home-component.component.html
@@ -1,3 +1,7 @@
-<p>
-  my-home-component works!
-</p>
+<ul>
+  <li *ngFor="let movie of movies">
+    <h3>ROOM {{movie.id}}</h3>
+    <img src="{{ movie.poster }}">
+    <h4>{{ movie.title }}</h4>
+  </li>
+</ul>
