--- a/src/app/my-home-component/my-home-component.component.css
+++ b/src/app/my-home-component/my-home-component.component.css
@@ -13,4 +13,10 @@ ul {
   font-family: 'Helvetica', sans-serif;
   margin:0;
   padding: 0;
+  font-weight: 100;
+}
+
+a {
+  color: #2b6494;
+  text-decoration: none;
 }
