--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,5 @@
-<nav>
-    <ul>
-      <li><a [routerLink]= "['/home']"> Home </a></li>
-    </ul>
-  </nav>
 
-<h1>
+<h1 style="text-align: center;">
   {{title}}
 </h1>
 
